--- a/timeline.css
+++ b/timeline.css
@@ -1,6 +1,7 @@
 /* Timeline CSS */
 #timeline-viewport{
 	width:100%;
+	height:100%;
 	margin:0;
 	padding:0;
 	overflow:auto;
@@ -8,7 +9,7 @@
 }
 #timeline{
 	width:2000px;
-	height:500px;
+	height:100%;
 	position:relative;
 }
 hr.line{
@@ -18,12 +19,12 @@ hr.line{
 	position:absolute;
 	top:50%;
 	width:100%;
-	z-index:1;
+	z-index:2;
 }
 #timeline .tick{
 	position:absolute;
 	font-size:13px;
-	color:#bbb;
+	color:#666;
 	top:50%;
 	z-index:2;
 	border-left:#CCCCCC solid 1px;
@@ -32,7 +33,7 @@ hr.line{
 }
 #timeline .tick > span{
 	position:absolute;
-	bottom:-40px;
+	bottom:-30px;
 	left:-50px;
 	width:100px;
 	text-align:center;
@@ -55,7 +56,7 @@ hr.line{
 }
 .item .info{
 	position:absolute;
-	z-index:4;
+	z-index:1;
 	left:0;
 	height:100px;
 	border-left:1px solid #ccc;
@@ -65,6 +66,15 @@ hr.line{
 .info .content{
 	padding:0 5px;
 	width:200px;
+	background:#FFF;
+	overflow:auto;
+}
+.content h3{
+	max-height:100px;
+	overflow:auto;	
+}
+.content article{
+	display:none;	
 }
 .down .content{ position:absolute; bottom: 0;}
 .content time{
