--- a/timeline.css
+++ b/timeline.css
@@ -1,14 +1,11 @@
 /* Timeline CSS */
 #timeline-viewport{
-	width:100%;
 	height:100%;
 	margin:0;
 	padding:0;
 	overflow:hidden;
-	border:1px solid #ccc;
 }
 #events{
-	width:2000px;
 	height:100%;
 	position:relative;
 }
@@ -16,7 +13,6 @@
 	position:absolute;
 	bottom:0;
 	left:0;
-	width:2000px;
 	background:#EBEBEB;
 	border-top:#CCC solid 5px;
 	height:100px;
@@ -24,10 +20,10 @@
 #timeline .tick{
 	position:absolute;
 	font-size:13px;
-	color:#666;
+	color:#444;
 	top:0;
 	z-index:2;
-	border-left:#CCCCCC solid 1px;
+	border-left:#666 solid 1px;
 	height:40px;
 }
 #timeline .tick > span{
@@ -37,60 +33,29 @@
 	width:100px;
 	text-align:center;
 }
-.item{
-	width:21px;
-	height:21px;
-	border:1px solid #fff;
+.event{
+	display:inline-block;	
+	max-width:300px;
+	padding:5px;
+	border:#CCC 1px solid;
+	color:inherit;
 	position:absolute;
-	bottom:-12px;
-	z-index:3;
+	text-decoration:none;
+	border-radius:10px;
 }
-.item:hover{
-	z-index:9;
+.event:hover{
+	background:#EFEFEF;
 }
-.item .info{
-	position:absolute;
-	z-index:1;
-	left:0;
-	height:100px;
-	border-left:1px solid #ccc;
-	top:-100px;
+.event article{
+	display:none;
 }
-.info .content{
-	padding:0 5px;
-	width:200px;
-	background:#FFF;
-	overflow:auto;
-	max-height:400px;
-}
-.content h3{
-	max-height:100px;
-	overflow:auto;	
-}
-.content article{
-	display:none;	
-}
-.down .content{ position:absolute; bottom: 0;}
-.content time{
-	display:block;
-	color:#aaa;
+.event time{
 	font-size:80%;
+	color:#666;
 }
-
-.politics{ background:#eb0000; }
-.politics .info{ border-color:#eb0000; }
-
-.history{ background:yellow; }
-.history .info{ border-color:yellow; }
-
-.science{ background:green; }
-.science .info{ border-color:green; }
-
-.sports{ background:pink; }
-.sports .info{ border-color:pink; }
-
-.entertainment{ background:orange; }
-.entertainment .info{ border-color:orange; }
-
-.art{ background:brown; }
-.art .info{ border-color:brown; }
+.event h3{
+	overflow:hidden;
+	text-overflow: ellipsis;
+	-o-text-overflow: ellipsis;
+	white-space: nowrap;
+}
